[package]
name = "rust_p2p_node"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "5.4"

sha3 = "0.10"
rand = "0.8"
async-trait = "0.1"

chrono = "*"

tokio ={ version = "1.0", features = ["full"] }
serde ={ version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "4.5.43", features = ["derive"] }
hex = "0.4.3"
